After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 640744 - mount-operation: don't show the dialog until the tree is populated
mount-operation: don't show the dialog until the tree is populated
Status: RESOLVED FIXED
Product: gtk+
Classification: Platform
Component: .General
unspecified
Other All
: Normal normal
: ---
Assigned To: gtk-bugs
gtk-bugs
Depends on:
Blocks:
 
 
Reported: 2011-01-27 18:18 UTC by Cosimo Cecchi
Modified: 2011-01-28 15:00 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
mount-operation: don't show the dialog until the tree is populated (2.24 KB, patch)
2011-01-27 18:18 UTC, Cosimo Cecchi
committed Details | Review

Description Cosimo Cecchi 2011-01-27 18:18:04 UTC
Otherwise it won't show up properly, and GTK+ will trigger a warning.
Don't know why this did not show up before.
Comment 1 Cosimo Cecchi 2011-01-27 18:18:06 UTC
Created attachment 179456 [details] [review]
mount-operation: don't show the dialog until the tree is populated
Comment 2 Matthias Clasen 2011-01-28 04:26:27 UTC
What does 'it won't show up properly' mean ? and why can't we populate the list after showing it ?
Comment 3 Cosimo Cecchi 2011-01-28 15:00:42 UTC
Pushed.